# Rustorium

./: .gitignore  Exercism  cleaner.sh
12_actix_rhai/src/: main.rs
13_vault/: password.db
15_rust_firebase_crud/src/: main.rs
16_spotify_api/src/: main.rs
5_json_writer/src/: main.rs
8_json_API_request/: Cargo.toml
9_basic_authentication/src/: main.rs
Archive/ch04_ownership/: Cargo.toml
Archive/ch06_enum/: Cargo.toml
Archive/ch07_my_project/: Cargo.toml
Archive/ch07_restaurant/: Cargo.toml
Archive/ch08_collection/: Cargo.toml
Archive/ch1/: Cargo.toml
Archive/ch10_1_generic/: Cargo.toml
Archive/ch10_2_trait/: Cargo.toml
Archive/ch10_3_lifetimes/: Cargo.toml
Archive/ch11_testing_adder/: Cargo.toml  cmd.md
Archive/ch12_minigrep/: Cargo.toml  cmd.md  output.txt
Archive/ch13_1_closures/: Cargo.toml
Archive/ch13_2_iterators/: Cargo.toml
Archive/ch14_1_workspaces/: cmd.md
Archive/ch14_cartes/: Cargo.toml  cmd.md
Archive/ch14_cartes/src/: lib.rs  main.rs
Archive/ch15_1_smart_pointers/: Cargo.toml
Archive/ch15_2_deref/: Cargo.toml
Archive/ch15_3_drop/: Cargo.toml
Archive/ch15_4_ref_counting/: Cargo.toml
Archive/ch15_5_interior_mutability/: Cargo.toml
Archive/ch15_6_reference_cycles/: Cargo.toml
Archive/ch16_1_create_threads/: Cargo.toml
Archive/ch16_2_message_passing/: Cargo.toml
Archive/ch16_3_sharing_state/: Cargo.toml
Archive/ch17_2_trait_objects/: Cargo.toml
Archive/ch17_3_state_oo_pattern/: Cargo.toml
Archive/ch17_oops/: Cargo.toml
Archive/ch18_1_pattern_matching/: Cargo.toml
Archive/ch18_2_pattern_syntax/: Cargo.toml
Archive/ch19_2_advanced_traits/: Cargo.toml
Archive/ch19_3_advanced_types/: Cargo.toml
Archive/ch19_4_advanced_functions_and_closures/: Cargo.toml
Archive/ch19_5_declarative_macros/: Cargo.toml
Archive/ch19_6_hello_macro/: Cargo.toml
Archive/ch19_6_procedural_macros/: Cargo.toml
Archive/ch19_6_procedural_macros/src/: lib.rs  main.rs
Archive/ch19_unsafe_rust/: Cargo.toml
Archive/ch2/: Cargo.toml
Archive/ch20_1_single_threaded_web_server/: 404.html  Cargo.toml  index.html
Archive/ch20_2_multi_threaded_web_server/: Cargo.toml
Archive/ch5_structs/: Cargo.toml
Archive/ch6_enum/: Cargo.toml
Archive/ch8_collection/: Cargo.toml
Archive/ch9_error-handling/: Cargo.toml  cmd.txt
Crust/ch01_lifetime_annotation/: Cargo.toml
Crust/ch01_strsplit/: Cargo.toml
Crust/ch02_declarative_macro/: .cmd.txt  Cargo.toml
Crust/ch03_iterators/: Cargo.toml
Crust/ch04_smart_pointers_internal_mutability/: Cargo.toml
Crust/ch05/: Cargo.toml
Crust/ch05_channels/: Cargo.toml
Crust/ch06_send_sync/: Cargo.toml
Crust/ch07_async_await/: Cargo.toml
Crust/ch08_func_closures_traits/: Cargo.toml
Crust/ch09_atomics_memory_ordering/: Cargo.toml  README.md
Crust/ch10_dispatch_and_fat_pointers/: Cargo.toml
Crust/ch11_std_collaction/: Cargo.toml
Exercism/: hello-world
Exercism/02-reverse-string/: Cargo.toml
Exercism/04-anagram/: Cargo.toml
Exercism/24-diffie-hellman/: Cargo.toml
Exercism/34-dot-dsl/: README.md
Exercism/36-grade-school/: README.md
Exercism/41-palindrome-products/: Cargo.toml
Exercism/43-pascals-triangle/: README.md
Exercism/58-robot-name/: Cargo.toml
Exercism/63-affine-cipher/: README.md
Exercism/64-atbash-cipher/: README.md
Exercism/76-pythagorean-triplet/: README.md
Exercism/82-plf/: Cargo.toml
Exercism/85-react/: Cargo.toml
Tools/autogit/: Cargo.toml
Tools/gtk_libadwaita_ui_20/: Cargo.toml
Tools/json_async_await_7/: test.json
Tools/json_get_request_6/: Cargo.toml  res.json
Tools/json_reader_4/: Cargo.toml
Tools/link_extractor_11/: Cargo.toml
Tools/pastebin_14/: pastebin.db
Tools/rust_mongodb_17/: Cargo.toml
Tools/spotify_api_16/: Cargo.toml
Vault/: Cargo.toml
Vault/src/: main.rs  pentry.rs
actix_rhai/: Cargo.toml
actix_rhai/src/: main.rs  multiply.rhai
actix_rhai_12/src/: add.rhai
autogit/src/: main.rs
basic_authentication/: Cargo.toml
basic_authentication/src/: main.rs
basic_authentication_9/src/: main.rs
compressor/src/: main.rs
csv_reader/: Cargo.toml
csv_reader_3/src/: main.rs
decompressor/: Cargo.toml
decompressor/src/: main.rs
decompressor_2/: Cargo.toml
download_images/: Cargo.toml
download_images/src/: main.rs
download_images_10/: Cargo.toml
json_API_request/src/: main.rs
json_async_await/: Cargo.toml
json_get_request/: Cargo.toml
json_reader/: Cargo.toml
json_reader_4/: test.json
json_writer/: Cargo.toml  test.json
pastebin/: Cargo.toml
pastebin/src/: main.rs
rust_chatgpt_19/: Cargo.toml
rust_firebase_crud/: Cargo.toml
rust_jwt_18/: Cargo.toml
rust_jwt_18/src/: error.rs  main.rs
spotify_api/: Cargo.toml
vault/: Cargo.toml
vault_13/: Cargo.toml
(+325 files in other folders)
