[package]
name = "json_API_request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1.34", features = ["full"]}
reqwest = {version = "0.11.22", features = ["json"]}
