[package]
name = "Vault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# << serialization library that supports multiple data formats, including JSON, XML, and YAML.
serde_json = "1.0"
# provides serialization and deserialization support for JSON data.
serde = { version = "1.0", features = ["derive"]}
