[package]
name = "pastebin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = {version = "0.30"}
actix-web = "4.4.0"
rand = "0.8.5"
actix-files = "0.6.2"
# serialization library that supports multiple data formats, including <<JSON, XML, and YAML>>.
serde = {version = "1.0", features = ["derive"]}