[package]
name = "rust_jwt_18"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.35", features = ["full"]}
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"

warp = "0.3.6"
chrono = "0.4.31"
jsonwebtoken = "9.2"
thiserror = "1.0.51"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = 'abort'
