[package]
name = "ch19_6_procedural_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ch19_6_hello_macro = { path = "../ch19_6_hello_macro" }
ch19_6_hello_macro_derive = { path = "../ch19_6_hello_macro/ch19_6_hello_macro_derive" }
