[package]
name = "json_get_request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Provide higher level HTTP Client
reqwest = {version = "0.11.22", features = ["blocking", "json"]}
error-chain = "0.12.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}