[package]
name = "link_extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
reqwest = {version = "0.11.12"}
tokio = {version = "1.34.0", features = ["full"]}
# for scraping only required data
select = "0.6.0"