[package]
name = "spotify_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
reqwest = "0.11.22"
tokio = {version = "1.35", features = ["full"]}
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"